# icub-assembly-collaborative

./: .gitignore  CMakeLists.txt  README.md
data-analysis/assembly-edhhi-analysis/: Results.m  all_subjects  boxplot_NARS.m  boxplot_NS1.m  boxplot_NS2.m  boxplot_NS3.m  boxplot_accuracy_alignment.m  boxplot_age.m  boxplot_extro.m  boxplot_gender.m  boxplot_graph.m  correlation_ArmEndEffector.m  correlation_NARS_force.m  correlation_NARS_pressureSkin.m  correlation_NARS_skin.m  correlation_NS1_force.m  correlation_NS1_pressureSkin.m  correlation_NS1_skin.m  correlation_NS2_force.m  correlation_NS2_pressureSkin.m  correlation_NS2_skin.m  correlation_NS3_force.m  correlation_NS3_pressureSkin.m  correlation_NS3_skin.m  correlation_SkinSensors.m  correlation_age_force.m  correlation_age_skin.m  correlation_extroversion_force.m  correlation_extroversion_pressureSkin.m  correlation_extroversion_skin.m  correlation_nars.m  correleation_age_pressureSkin.m  extraction.m  extraction_CartLeftArm.m  extraction_CartRightArm.m  extraction_leftArmEndEffector.m  extraction_leftArmTorques.m  extraction_leftSkinForearm.m  extraction_rightArmEndEffector.m  extraction_rightArmTorques.m  (+19 more)
tuning-interaction/: CMakeLists.txt
tuning-interaction/app/scripts/: tuning-interaction.xml.template
tuning-interaction/src/: main.cpp  robot_interfaces.cpp  robot_interfaces.h
